tdf#113263 Revert "PPTX export: correct position for shape in group"

This reverts commit fd3383556881d6a9d73e1a3027c079cf9bfddecb.

Change-Id: Ia9befead3b45975d91215cea584b32afadb5bd52
Reviewed-on: https://gerrit.libreoffice.org/43711
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>